# fzmq

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
cmake/Modules/: FindPandoc.cmake  FindZeroMQ.cmake  Testing.cmake
doc/: CMakeLists.txt  fzmq.md  index.md  links.md  style.css  template.in  zmq_bind.md  zmq_close.md  zmq_connect.md  zmq_ctx_destroy.md  zmq_ctx_get.md  zmq_ctx_new.md  zmq_ctx_set.md  zmq_ctx_shutdown.md  zmq_ctx_term.md  zmq_curve.md  zmq_curve_keypair.md  zmq_disconnect.md  zmq_errno.md  zmq_getsockopt.md  zmq_gssapi.md  zmq_has.md  zmq_init.md  zmq_inproc.md  zmq_ipc.md  zmq_msg_close.md  zmq_msg_copy.md  zmq_msg_data.md  zmq_msg_get.md  zmq_msg_gets.md  zmq_msg_init.md  zmq_msg_init_data.md  zmq_msg_init_size.md  zmq_msg_more.md  zmq_msg_move.md  zmq_msg_recv.md  zmq_msg_send.md  zmq_msg_set.md  zmq_msg_size.md  zmq_null.md  (+20 more)
src/: CMakeLists.txt  zdata.f90  zmq.f90  zmq_constants.c  zmq_constants.c.in  zrpc.f90
tests/: CMakeLists.txt  assert.f90  test_context.f90  test_context_deprecated.f90  test_error.f90  test_has.f90  test_message.f90  test_msg_get.f90  test_msg_init_data.f90  test_msg_init_data_ffn.f90  test_poll.f90  test_proxy_steerable.f90  test_send_const.f90  test_send_recv.f90  test_send_recv_deprecated.f90  test_send_recv_message.f90  test_send_recv_multipart.f90  test_send_recv_string.f90  test_socket.f90  test_socket_monitor.f90  test_socket_options.f90  test_version.f90  test_z85.f90
