ADD_LIBRARY(fzmq STATIC zmq.f90 zdata.f90 zrpc.f90)
TARGET_LINK_LIBRARIES(fzmq ${EXTRA_LIBS})
INSTALL(TARGETS fzmq ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/zmq.mod DESTINATION include)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/zdata.mod DESTINATION include)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/zrpc.mod DESTINATION include)
