CONFIGURE_FILE(zmq_constants.c.in zmq_constants.c)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/zmq_constants.c GENERATED)
ADD_LIBRARY(fzmq STATIC ${CMAKE_CURRENT_BINARY_DIR}/zmq_constants.c zmq.f90)
TARGET_LINK_LIBRARIES(fzmq ${EXTRA_LIBS})
INSTALL(TARGETS fzmq ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/zmq.mod DESTINATION include)
